--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,64 @@
-./elpaca/*
-./var/*
-./etc/*
-./eln-cache/*
-./tree-sitter/*
-./custom.el
+# Created by https://www.toptal.com/developers/gitignore/api/emacs
+# Edit at https://www.toptal.com/developers/gitignore?templates=emacs
 
+### Emacs ###
+# -*- mode: gitignore; -*-
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
+
+# flymake-mode
+*_flymake.*
+
+# eshell files
+/eshell/history
+/eshell/lastdir
+
+# elpa packages
+/elpa/
+
+# reftex files
+*.rel
+
+# AUCTeX auto folder
+/auto/
+
+# cask packages
+.cask/
+dist/
+
+# Flycheck
+flycheck_*.el
+
+# server auth directory
+/server/
+
+# projectiles files
+.projectile
+
+# directory configuration
+.dir-locals.el
+
+# End of https://www.toptal.com/developers/gitignore/api/emacs
+
+# add
+
+/elpaca/
+/var/
+/etc/
+/eln-cache/
+/tree-sitter/
+/.cache/
+
+custom.el
+
+# ends
